creamos archivo con html y css nuevo

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <h1> Bienvenido a mi pagina !!</1>
-        <p> para las ofertas click aca abajo (este es el parrafo) </p>
-        <a href="https://secciondeofertas.shop/DSTienda"> click para ir a mi tienda </a>
+    <h1> Bienvenido al curso de introduccion al desarollo frontend !!</1>
+        <p> esta es una pagina de ejemplo creada con HTML </p>
+        <a href="https://google.com"> visita el sitio de google </a>
 </body>
 
 </html>
